// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListPage with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
       
      0
       Expenses
    </div>
     
    <div
      className="show-for-desktop"
    >
      Expense (count: 
      0
      )
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item__empty"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseListPage with test expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
       
      3
       Expenses
    </div>
     
    <div
      className="show-for-desktop"
    >
      Expense (count: 
      3
      )
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItemPage
      amount={300}
      createdAt={0}
      description="bread"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItemPage
      amount={200}
      createdAt={-345600000}
      description="milk"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItemPage
      amount={100}
      createdAt={345600000}
      description="spinach"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
